--- a/result-processing/parsing-scripts/jupyter-parse.ipynb
+++ b/result-processing/parsing-scripts/jupyter-parse.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -11,9 +11,145 @@
      "text": [
       "Preparing to Parse Results:\n",
       "\n",
-      "['BIKE-L1', 'BIKE-L3', 'BIKE-L5', 'Classic-McEliece-348864', 'Classic-McEliece-348864f', 'Classic-McEliece-460896', 'Classic-McEliece-460896f', 'Classic-McEliece-6688128', 'Classic-McEliece-6688128f', 'Classic-McEliece-6960119', 'Classic-McEliece-6960119f', 'Classic-McEliece-8192128', 'Classic-McEliece-8192128f', 'HQC-128', 'HQC-192', 'HQC-256', 'Kyber512', 'Kyber768', 'Kyber1024', 'Kyber512-90s', 'Kyber768-90s', 'Kyber1024-90s', 'sntrup761', 'FrodoKEM-640-AES', 'FrodoKEM-640-SHAKE', 'FrodoKEM-976-AES', 'FrodoKEM-976-SHAKE', 'FrodoKEM-1344-AES', 'FrodoKEM-1344-SHAKE']\n",
-      "['Dilithium2', 'Dilithium3', 'Dilithium5', 'Dilithium2-AES', 'Dilithium3-AES', 'Dilithium5-AES', 'Falcon-512', 'Falcon-1024', 'SPHINCS+-Haraka-128f-robust', 'SPHINCS+-Haraka-128f-simple', 'SPHINCS+-Haraka-128s-robust', 'SPHINCS+-Haraka-128s-simple', 'SPHINCS+-Haraka-192f-robust', 'SPHINCS+-Haraka-192f-simple', 'SPHINCS+-Haraka-192s-robust', 'SPHINCS+-Haraka-192s-simple', 'SPHINCS+-Haraka-256f-robust', 'SPHINCS+-Haraka-256f-simple', 'SPHINCS+-Haraka-256s-robust', 'SPHINCS+-Haraka-256s-simple', 'SPHINCS+-SHA256-128f-robust', 'SPHINCS+-SHA256-128f-simple', 'SPHINCS+-SHA256-128s-robust', 'SPHINCS+-SHA256-128s-simple', 'SPHINCS+-SHA256-192f-robust', 'SPHINCS+-SHA256-192f-simple', 'SPHINCS+-SHA256-192s-robust', 'SPHINCS+-SHA256-192s-simple', 'SPHINCS+-SHA256-256f-robust', 'SPHINCS+-SHA256-256f-simple', 'SPHINCS+-SHA256-256s-robust', 'SPHINCS+-SHA256-256s-simple', 'SPHINCS+-SHAKE256-128f-robust', 'SPHINCS+-SHAKE256-128f-simple', 'SPHINCS+-SHAKE256-128s-robust', 'SPHINCS+-SHAKE256-128s-simple', 'SPHINCS+-SHAKE256-192f-robust', 'SPHINCS+-SHAKE256-192f-simple', 'SPHINCS+-SHAKE256-192s-robust', 'SPHINCS+-SHAKE256-192s-simple', 'SPHINCS+-SHAKE256-256f-robust', 'SPHINCS+-SHAKE256-256f-simple', 'SPHINCS+-SHAKE256-256s-robust', 'SPHINCS+-SHAKE256-256s-simple']\n",
       "Parsing results... \n",
+      "   Algorithm Operation   intits maxBytes maxHeap extHeap maxStack\n",
+      "0    BIKE-L1    keygen  2622297    42648    6844      44    35760\n",
+      "1    BIKE-L1    encaps  3108444    34536    8449      71    26016\n",
+      "2    BIKE-L1    decaps  1977365    85808    8481      79    77248\n",
+      "3    BIKE-L1    keygen  2622292    42648    6844      44    35760\n",
+      "4    BIKE-L1    encaps  3108454    34536    8449      71    26016\n",
+      "5    BIKE-L1    decaps  1977365    85808    8481      79    77248\n",
+      "6    BIKE-L1    keygen  2622307    42648    6844      44    35760\n",
+      "7    BIKE-L1    encaps  3108449    34536    8449      71    26016\n",
+      "8    BIKE-L1    decaps  1977365    85808    8481      79    77248\n",
+      "9    BIKE-L1    keygen  2622297    42648    6844      44    35760\n",
+      "10   BIKE-L1    encaps  3108449    34536    8449      71    26016\n",
+      "11   BIKE-L1    decaps  1977360    85808    8481      79    77248\n",
+      "12   BIKE-L1    keygen  2622302    42648    6844      44    35760\n",
+      "13   BIKE-L1    encaps  3108454    34536    8449      71    26016\n",
+      "14   BIKE-L1    decaps  1977365    85808    8481      79    77248\n",
+      "15   BIKE-L1    keygen  2622297    42648    6844      44    35760\n",
+      "16   BIKE-L1    encaps  3108454    34536    8449      71    26016\n",
+      "17   BIKE-L1    decaps  1977370    85808    8481      79    77248\n",
+      "18   BIKE-L1    keygen  2622302    42648    6844      44    35760\n",
+      "19   BIKE-L1    encaps  3108454    34536    8449      71    26016\n",
+      "20   BIKE-L1    decaps  1977365    85808    8481      79    77248\n",
+      "21   BIKE-L1    keygen  2622302    42648    6844      44    35760\n",
+      "22   BIKE-L1    encaps  3108444    34536    8449      71    26016\n",
+      "23   BIKE-L1    decaps  1977365    85808    8481      79    77248\n",
+      "24   BIKE-L1    keygen  2622302    42648    6844      44    35760\n",
+      "25   BIKE-L1    encaps  3108454    34536    8449      71    26016\n",
+      "26   BIKE-L1    decaps  1977370    85808    8481      79    77248\n",
+      "27   BIKE-L1    keygen  2622297    42648    6844      44    35760\n",
+      "28   BIKE-L1    encaps  3108449    34536    8449      71    26016\n",
+      "29   BIKE-L1    decaps  1977370    85808    8481      79    77248\n",
+      "30   BIKE-L1    keygen  2622297    42648    6844      44    35760\n",
+      "31   BIKE-L1    encaps  3108454    34536    8449      71    26016\n",
+      "32   BIKE-L1    decaps  1977370    85808    8481      79    77248\n",
+      "33   BIKE-L1    keygen  2622302    42648    6844      44    35760\n",
+      "34   BIKE-L1    encaps  3108454    34536    8449      71    26016\n",
+      "35   BIKE-L1    decaps  1977365    85808    8481      79    77248\n",
+      "36   BIKE-L1    keygen  2622297    42648    6844      44    35760\n",
+      "37   BIKE-L1    encaps  3108454    34536    8449      71    26016\n",
+      "38   BIKE-L1    decaps  1977365    85808    8481      79    77248\n",
+      "39   BIKE-L1    keygen  2622297    42648    6844      44    35760\n",
+      "40   BIKE-L1    encaps  3108454    34536    8449      71    26016\n",
+      "41   BIKE-L1    decaps  1977365    85808    8481      79    77248\n",
+      "42   BIKE-L1    keygen  2622282    42648    6844      44    35760\n",
+      "43   BIKE-L1    encaps  3108440    34536    8449      71    26016\n",
+      "44   BIKE-L1    decaps  1977356    85808    8481      79    77248\n",
+      "   Algorithm Operation   intits maxBytes maxHeap extHeap maxStack\n",
+      "0    BIKE-L1    keygen  3502056    98912    6844      44    92024\n",
+      "1    BIKE-L1    encaps  2540748    34560    8449      71    26040\n",
+      "2    BIKE-L1    decaps  2423396    83432    8481      79    74872\n",
+      "3    BIKE-L1    keygen  3502056    98912    6844      44    92024\n",
+      "4    BIKE-L1    encaps  2540748    34560    8449      71    26040\n",
+      "5    BIKE-L1    decaps  2423396    83432    8481      79    74872\n",
+      "6    BIKE-L1    keygen  3502056    98912    6844      44    92024\n",
+      "7    BIKE-L1    encaps  2540748    34560    8449      71    26040\n",
+      "8    BIKE-L1    decaps  2423396    83432    8481      79    74872\n",
+      "9    BIKE-L1    keygen  3502056    98912    6844      44    92024\n",
+      "10   BIKE-L1    encaps  2540748    34560    8449      71    26040\n",
+      "11   BIKE-L1    decaps  2423396    83432    8481      79    74872\n",
+      "12   BIKE-L1    keygen  3502056    98912    6844      44    92024\n",
+      "13   BIKE-L1    encaps  2540748    34560    8449      71    26040\n",
+      "14   BIKE-L1    decaps  2423396    83432    8481      79    74872\n",
+      "15   BIKE-L1    keygen  3502056    98912    6844      44    92024\n",
+      "16   BIKE-L1    encaps  2540748    34560    8449      71    26040\n",
+      "17   BIKE-L1    decaps  2423396    83432    8481      79    74872\n",
+      "18   BIKE-L1    keygen  3502056    98912    6844      44    92024\n",
+      "19   BIKE-L1    encaps  2540748    34560    8449      71    26040\n",
+      "20   BIKE-L1    decaps  2423396    83432    8481      79    74872\n",
+      "21   BIKE-L1    keygen  3502056    98912    6844      44    92024\n",
+      "22   BIKE-L1    encaps  2540748    34560    8449      71    26040\n",
+      "23   BIKE-L1    decaps  2423396    83432    8481      79    74872\n",
+      "24   BIKE-L1    keygen  3502056    98912    6844      44    92024\n",
+      "25   BIKE-L1    encaps  2540748    34560    8449      71    26040\n",
+      "26   BIKE-L1    decaps  2423396    83432    8481      79    74872\n",
+      "27   BIKE-L1    keygen  3502056    98912    6844      44    92024\n",
+      "28   BIKE-L1    encaps  2540748    34560    8449      71    26040\n",
+      "29   BIKE-L1    decaps  2423396    83432    8481      79    74872\n",
+      "30   BIKE-L1    keygen  3502056    98912    6844      44    92024\n",
+      "31   BIKE-L1    encaps  2540748    34560    8449      71    26040\n",
+      "32   BIKE-L1    decaps  2423396    83432    8481      79    74872\n",
+      "33   BIKE-L1    keygen  3502056    98912    6844      44    92024\n",
+      "34   BIKE-L1    encaps  2540748    34560    8449      71    26040\n",
+      "35   BIKE-L1    decaps  2423396    83432    8481      79    74872\n",
+      "36   BIKE-L1    keygen  3502056    98912    6844      44    92024\n",
+      "37   BIKE-L1    encaps  2540748    34560    8449      71    26040\n",
+      "38   BIKE-L1    decaps  2423396    83432    8481      79    74872\n",
+      "39   BIKE-L1    keygen  3502056    98912    6844      44    92024\n",
+      "40   BIKE-L1    encaps  2540748    34560    8449      71    26040\n",
+      "41   BIKE-L1    decaps  2423396    83432    8481      79    74872\n",
+      "42   BIKE-L1    keygen  3501970    98896    6844      44    92008\n",
+      "43   BIKE-L1    encaps  2540666    34544    8449      71    26024\n",
+      "44   BIKE-L1    decaps  2423314    83416    8481      79    74856\n",
+      "   Algorithm Operation   intits maxBytes maxHeap extHeap maxStack\n",
+      "0    BIKE-L1    keygen  3511085    98928    6844      44    92040\n",
+      "1    BIKE-L1    encaps  2549781    34576    8449      71    26056\n",
+      "2    BIKE-L1    decaps  2432433    83448    8481      79    74888\n",
+      "3    BIKE-L1    keygen  3511085    98928    6844      44    92040\n",
+      "4    BIKE-L1    encaps  2549781    34576    8449      71    26056\n",
+      "5    BIKE-L1    decaps  2432433    83448    8481      79    74888\n",
+      "6    BIKE-L1    keygen  3511085    98928    6844      44    92040\n",
+      "7    BIKE-L1    encaps  2549781    34576    8449      71    26056\n",
+      "8    BIKE-L1    decaps  2432433    83448    8481      79    74888\n",
+      "9    BIKE-L1    keygen  3511085    98928    6844      44    92040\n",
+      "10   BIKE-L1    encaps  2549781    34576    8449      71    26056\n",
+      "11   BIKE-L1    decaps  2432433    83448    8481      79    74888\n",
+      "12   BIKE-L1    keygen  3511085    98928    6844      44    92040\n",
+      "13   BIKE-L1    encaps  2549781    34576    8449      71    26056\n",
+      "14   BIKE-L1    decaps  2432433    83448    8481      79    74888\n",
+      "15   BIKE-L1    keygen  3511085    98928    6844      44    92040\n",
+      "16   BIKE-L1    encaps  2549781    34576    8449      71    26056\n",
+      "17   BIKE-L1    decaps  2432433    83448    8481      79    74888\n",
+      "18   BIKE-L1    keygen  3511085    98928    6844      44    92040\n",
+      "19   BIKE-L1    encaps  2549781    34576    8449      71    26056\n",
+      "20   BIKE-L1    decaps  2432433    83448    8481      79    74888\n",
+      "21   BIKE-L1    keygen  3511085    98928    6844      44    92040\n",
+      "22   BIKE-L1    encaps  2549781    34576    8449      71    26056\n",
+      "23   BIKE-L1    decaps  2432433    83448    8481      79    74888\n",
+      "24   BIKE-L1    keygen  3511085    98928    6844      44    92040\n",
+      "25   BIKE-L1    encaps  2549781    34576    8449      71    26056\n",
+      "26   BIKE-L1    decaps  2432433    83448    8481      79    74888\n",
+      "27   BIKE-L1    keygen  3511085    98928    6844      44    92040\n",
+      "28   BIKE-L1    encaps  2549781    34576    8449      71    26056\n",
+      "29   BIKE-L1    decaps  2432433    83448    8481      79    74888\n",
+      "30   BIKE-L1    keygen  3511085    98928    6844      44    92040\n",
+      "31   BIKE-L1    encaps  2549781    34576    8449      71    26056\n",
+      "32   BIKE-L1    decaps  2432433    83448    8481      79    74888\n",
+      "33   BIKE-L1    keygen  3511085    98928    6844      44    92040\n",
+      "34   BIKE-L1    encaps  2549781    34576    8449      71    26056\n",
+      "35   BIKE-L1    decaps  2432433    83448    8481      79    74888\n",
+      "36   BIKE-L1    keygen  3511085    98928    6844      44    92040\n",
+      "37   BIKE-L1    encaps  2549781    34576    8449      71    26056\n",
+      "38   BIKE-L1    decaps  2432433    83448    8481      79    74888\n",
+      "39   BIKE-L1    keygen  3511085    98928    6844      44    92040\n",
+      "40   BIKE-L1    encaps  2549781    34576    8449      71    26056\n",
+      "41   BIKE-L1    decaps  2432433    83448    8481      79    74888\n",
+      "42   BIKE-L1    keygen  3511081    98912    6844      44    92024\n",
+      "43   BIKE-L1    encaps  2549781    34560    8449      71    26040\n",
+      "44   BIKE-L1    decaps  2432433    83432    8481      79    74872\n",
       "\n",
       "Results have been processed - CSV files can be found in the Results Directory at the repo root\n",
       "\n"
@@ -30,6 +166,7 @@
     "import re\n",
     "import os\n",
     "import shutil\n",
+    "from avg-gen import gen_averages\n",
     "\n",
     "# Declaring gloabl\n",
     "kem_algs = []\n",
@@ -61,8 +198,6 @@
     "            #alg = line.strip()\n",
     "            sig_algs.append(line.strip())\n",
     "\n",
-    "    print(kem_algs)\n",
-    "    print(sig_algs)\n",
     "\n",
     "#***********************************************************************\n",
     "def speed_processing(type_speed_dir, up_speed_dir):\n",
@@ -157,7 +292,7 @@
     "\n",
     "        # Creating temp dataframe\n",
     "        temp_df = pd.DataFrame(columns=filednames)\n",
-    "        \n",
+    "\n",
     "        #Looping throuhg kem algorithms\n",
     "        for kem_alg in kem_algs:\n",
     "\n",
@@ -220,25 +355,33 @@
     "    # Declaring dataframes and fieldnames\n",
     "    mem_fieldnames = [\"Algorithm\", \"Operation\", \"intits\", \"maxBytes\", \"maxHeap\", \"extHeap\", \"maxStack\"]\n",
     "    speed_fieldnames = [\"Algorithm\", \"Operation\", \"\"]\n",
+    "    kem_mem_avg = pd.DataFrame(columns=mem_fieldnames)\n",
+    "\n",
+    "    # kem_mem_filename = kem_mem_file_prefix + str(run_count) + \".csv\"\n",
+    "    # kem_speed_filename = sig_mem_file_prefix + str(run_count) + \".csv\"\n",
     "\n",
     "\n",
-    "    # Looping throuhg the kem algorithms\n",
+    "    \"\"\"Getting the averages for the memory results\"\"\"\n",
+    "    # Looping through the kem algorithms\n",
     "    for kem_alg in kem_algs:\n",
     "\n",
-    "        # Looping throuhg each run\n",
-    "        for run_count in range (1,16,1):\n",
-    "    \n",
-    "            # Creating filenames and dataframe\n",
+    "        temp_df1 = pd.DataFrame(columns=mem_fieldnames)\n",
+    "\n",
+    "        # Looping throuhg the run files\n",
+    "        for run_count in range(1,16,1):\n",
+    "\n",
+    "            # Setting filename and reading csv into dataframe\n",
     "            kem_mem_filename = kem_mem_file_prefix + str(run_count) + \".csv\"\n",
-    "            kem_speed_filename = sig_mem_file_prefix + str(run_count) + \".csv\"\n",
+    "            temp_df2 = pd.read_csv(kem_mem_filename)\n",
     "\n",
-    "            # # Loading current file into temp dataframe\n",
-    "            # temp_df = pd.read_csv(kem_speed_filename)\n",
-    "            # print(kem_alg)\n",
-    "            # print(temp_df[\"Iterations\"])\n",
-    "            # break\n",
+    "            #Getting the algorithm operations across all files into one\n",
+    "            temp_df2 = temp_df2.loc[temp_df2[\"Algorithm\"].str.contains(kem_alg)]\n",
+    "            temp_df1 = pd.concat([temp_df2, temp_df1], ignore_index=True, sort=False)\n",
     "\n",
+    "        print(temp_df1)\n",
+    "        break\n",
     "\n",
+    "        \n",
     "\n",
     "\n",
     "\n",
@@ -344,6 +487,13 @@
     "    main()\n",
     "\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
